# instagram-auto-post

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  e git add file... to include in what will be committed)  main.py  pyproject.toml
.atl/: skill-registry.md
.engram/: manifest.json
.especificar/especificaciones/019-hot-reload-dev/: especificacion.md  plan.md  tareas.md
.especificar/especificaciones/020-jwt-cookie-auth/: especificacion.md  plan.md  tareas.md
.especificar/especificaciones/htmx-register-form/: especificacion.md  plan.md  tareas.md
.specify/specs/: SPEC-001.md  SPEC-002.md  SPEC-003.md  SPEC-004.md  SPEC-005.md  SPEC-006.md  SPEC-007.md  SPEC-009.md
app/: main.py  worker.py
app/auth/: __init__.py  dependencies.py  instagram.py  routes.py  schemas.py  security.py  utils.py
app/core/: __init__.py  config.py  database.py
app/dashboard/: __init__.py  routes.py  service.py
app/models/: __init__.py  instagram.py  media_file.py  post.py  user.py
app/services/: __init__.py  instagram.py  storage.py
app/templates/: base.html  index.html  landing.html
app/webhooks/: __init__.py  meta.py  schemas.py  security.py
migrations/: env.py
migrations/versions/: 449e4f01757c_init_db.py  add_instagram_account.py  add_media_file_table.py  add_media_files_and_posts.py  add_scheduled_at_to_posts.py  create_user_table.py
openspec/: config.yaml
tests/: conftest.py  test_beat_scheduler.py  test_dashboard.py  test_landing_page.py  test_router_guard.py  test_webhooks.py
(+83 files in other folders)
